--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <nav>
       <ul>
         <li><a href="#juegos">Juegos</a></li>
-        <li><a href="#apps">Aplicaciones</a></li>
-        <li><a href="#peliculas">Películas</a></li>
+        <li><a href="#aplicaciones">Aplicaciones</a></li>
+        <li><a href="#películas">Películas</a></li>
       </ul>
     </nav>
   </header>  <section id="juegos">
