--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
     <nav>
       <ul>
         <li><a href="#juegos">Juegos</a></li>
-        <li><a href="#aplicaciones">Aplicaciones</a></li>
-        <li><a href="#películas">Películas</a></li>
+        <li><a href="#apps">Aplicaciones</a></li>
+        <li><a href="#peliculas">Películas</a></li>
       </ul>
     </nav>
   </header>  <section id="juegos">
@@ -127,7 +127,7 @@
       <a href="https://innersloth.com/gameAmongUs.php" target="_blank" rel="noopener noreferrer" class="card">Among Us</a>
     </div>
     <a href="juegos.html" class="subpage-link">Ver más juegos →</a>
-  </section>  <section id="apps">
+  </section>  <section id="aplicaciones">
     <h2>📱 Aplicaciones</h2>
     <p>Explora apps útiles, creativas y divertidas para tu día a día.</p>
     <div class="card-container">
@@ -136,7 +136,7 @@
       <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" target="_blank" rel="noopener noreferrer" class="card">Snapseed</a>
     </div>
     <a href="aplicaciones.html" class="subpage-link">Ver más aplicaciones →</a>
-  </section>  <section id="peliculas">
+  </section>  <section id="películas">
     <h2>🍿 Películas</h2>
     <p>Recomendaciones de películas imperdibles, desde clásicos hasta los estrenos más recientes.</p>
     <div class="card-container">
