Actu última (espero)

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <nav>
       <ul>
         <li><a href="#juegos">Juegos</a></li>
-        <li><a href="#apps">Aplicaciones</a></li>
+        <li><a href="#aplicaciones">Aplicaciones</a></li>
         <li><a href="#peliculas">Películas</a></li>
       </ul>
     </nav>
@@ -136,7 +136,7 @@
       <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" target="_blank" rel="noopener noreferrer" class="card">Snapseed</a>
     </div>
     <a href="aplicaciones.html" class="subpage-link">Ver más aplicaciones →</a>
-  </section>  <section id="películas">
+  </section>  <section id="peliculas">
     <h2>🍿 Películas</h2>
     <p>Recomendaciones de películas imperdibles, desde clásicos hasta los estrenos más recientes.</p>
     <div class="card-container">
