--- a/aplicaciones.html
+++ b/aplicaciones.html
@@ -91,7 +91,7 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="juegos.html">Juegos</a></li>
-        <li><a href="peliculas.html">Películas</a></li>
+        <li><a href="películas.html">Películas</a></li>
       </ul>
     </nav>
   </header>  <section>
