--- a/juegos.html
+++ b/juegos.html
@@ -90,8 +90,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Inicio</a></li>
-        <li><a href="apps.html">Aplicaciones</a></li>
-        <li><a href="peliculas.html">Películas</a></li>
+        <li><a href="aplicaciones.html">Aplicaciones</a></li>
+        <li><a href="películas.html">Películas</a></li>
       </ul>
     </nav>
   </header>  <section>
