--- a/películas.html
+++ b/películas.html
@@ -91,7 +91,7 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="juegos.html">Juegos</a></li>
-        <li><a href="apps.html">Aplicaciones</a></li>
+        <li><a href="aplicaciones.html">Aplicaciones</a></li>
       </ul>
     </nav>
   </header>  <section>
