--- a/datapacks.html
+++ b/datapacks.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZC Tech - Aplicaciones</title>
+  <title>ZC Tech - Data Packs</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      background: linear-gradient(135deg, #232526, #414345);
       color: #fff;
       line-height: 1.6;
       padding: 2rem;
@@ -71,23 +71,21 @@
 </head>
 <body>
   <h1>ZC Tech</h1>
-  <h2>📱 Catálogo de Aplicaciones</h2>
+  <h2>📂 Catálogo de Data Packs</h2>
 
   <div class="card-container">
-    <a href="https://www.notion.so/" target="_blank" class="card">Notion</a>
-    <a href="https://open.spotify.com/" target="_blank" class="card">Spotify</a>
-    <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" target="_blank" class="card">Snapseed</a>
-    <a href="https://www.canva.com/" target="_blank" class="card">Canva</a>
-    <a href="https://telegram.org/" target="_blank" class="card">Telegram</a>
-    <a href="https://www.duolingo.com/" target="_blank" class="card">Duolingo</a>
-    <a href="https://www.tiktok.com/" target="_blank" class="card">TikTok</a>
-    <a href="https://drive.google.com/" target="_blank" class="card">Google Drive</a>
+    <a href="https://drive.google.com/xxxx" target="_blank" class="card">Rōnin FC Pack</a>
+    <a href="https://www.mediafire.com/file/yyyy/team-x-pack.zip/file" target="_blank" class="card">Team X Pack</a>
+    <a href="https://mega.nz/file/zzzz" target="_blank" class="card">Ultimate Mod</a>
+    <a href="https://drive.google.com/aaaa" target="_blank" class="card">Legends Pack</a>
+    <a href="https://www.mediafire.com/file/bbbb/fantasy-pack.zip/file" target="_blank" class="card">Fantasy Pack</a>
+    <a href="https://mega.nz/file/cccc" target="_blank" class="card">Pro Champs Pack</a>
   </div>
 
   <a href="index.html" class="inicio-btn">← Volver al Inicio</a>
 
   <footer>
-    <p>© 2025 ZC Tech | Página de Aplicaciones</p>
+    <p>© 2025 ZC Tech | Página de Data Packs</p>
   </footer>
 </body>
 </html>
