--- a/index.html
+++ b/index.html
@@ -3,193 +3,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ZC Tech</title>
+  <title>ZC Tech - Inicio</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #141e30, #243b55);
       color: #fff;
       line-height: 1.6;
-      padding-top: 120px; /* 👈 espacio para que el header no tape el contenido */
-    }
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      text-align: center;
       padding: 2rem;
-      z-index: 1000;
-      transition: top 0.4s ease;
+      text-align: center;
     }
-    header.hide {
-      top: -120px;
-    }
-    header h1 {
-      font-size: 2.5rem;
+    h1 {
+      font-size: 2.8rem;
       margin-bottom: 0.5rem;
       background: linear-gradient(90deg, #ff4081, #00d9ff, #ffea00);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
-    nav a {
-      color: #00d9ff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
+    h2 {
+      font-size: 1.3rem;
       color: #ffea00;
+      margin-bottom: 2rem;
     }
     section {
-      min-height: 100vh;
-      padding: 4rem 2rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
+      margin: 3rem 0;
     }
-    section h2 {
-      font-size: 2.2rem;
+    section h3 {
+      font-size: 1.8rem;
       margin-bottom: 1rem;
       color: #ffea00;
-      text-shadow: 0 0 10px rgba(255,255,255,0.5);
-    }
-    section p {
-      max-width: 700px;
-      margin-bottom: 2rem;
     }
     .card-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 1.5rem;
-      width: 100%;
-      max-width: 1000px;
+      gap: 1.2rem;
+      margin-top: 1rem;
+      max-width: 900px;
+      margin-inline: auto;
     }
     .card {
       display: block;
       text-decoration: none;
-      background: linear-gradient(135deg, rgba(255, 64, 129, 0.9), rgba(0, 217, 255, 0.9));
       border-radius: 15px;
-      padding: 1.5rem;
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      padding: 1.2rem;
       font-weight: bold;
       color: #fff;
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
     }
     .card:hover {
       transform: scale(1.07);
-      box-shadow: 0 0 20px rgba(255, 234, 0, 0.7);
+      box-shadow: 0 0 20px rgba(255,255,255,0.7);
     }
-    .subpage-link {
-      margin-top: 1rem;
+    .juegos { background: linear-gradient(135deg, #ff4081, #00d9ff); }
+    .apps { background: linear-gradient(135deg, #00d9ff, #ffea00); color: #000; }
+    .pelis { background: linear-gradient(135deg, #ff4081, #ffea00); color: #000; }
+    .packs { background: linear-gradient(135deg, #00d9ff, #8e2de2); }
+    .ver-mas {
       display: inline-block;
-      padding: 0.5rem 1rem;
+      margin-top: 1rem;
+      padding: 0.6rem 1.2rem;
       background: #ff4081;
       color: #fff;
       border-radius: 8px;
       text-decoration: none;
+      font-weight: bold;
       transition: background 0.3s ease;
     }
-    .subpage-link:hover {
-      background: #ffea00;
-      color: #000;
-    }
+    .ver-mas:hover { background: #ffea00; color: #000; }
     footer {
+      margin-top: 3rem;
       text-align: center;
       padding: 1rem;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0,0,0,0.7);
       font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>ZC Tech</h1>
-    <nav>
-      <ul>
-        <li><a href="#juegos">Juegos</a></li>
-        <li><a href="#aplicaciones">Aplicaciones</a></li>
-        <li><a href="#peliculas">Películas</a></li>
-        <li><a href="#datapacks">Data Packs</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>ZC Tech</h1>
+  <h2>Tu espacio para Juegos, Aplicaciones, Películas y Data Packs</h2>
 
-  <section id="juegos">
-    <h2>🎮 Juegos</h2>
-    <p>Aquí encontrarás recomendaciones y novedades del mundo gamer, desde clásicos hasta los más recientes lanzamientos.</p>
+  <!-- Juegos -->
+  <section>
+    <h3>🎮 Juegos</h3>
     <div class="card-container">
-      <a href="https://www.minecraft.net" target="_blank" rel="noopener noreferrer" class="card">Minecraft</a>
-      <a href="https://www.zelda.com/" target="_blank" rel="noopener noreferrer" class="card">The Legend of Zelda</a>
-      <a href="https://innersloth.com/gameAmongUs.php" target="_blank" rel="noopener noreferrer" class="card">Among Us</a>
+      <a href="https://www.playstation.com/es-es/god-of-war/" target="_blank" class="card juegos">God of War</a>
+      <a href="https://www.hollowknight.com/" target="_blank" class="card juegos">Hollow Knight</a>
+      <a href="https://genshin.hoyoverse.com/" target="_blank" class="card juegos">Genshin Impact</a>
     </div>
-    <a href="juegos.html" class="subpage-link">Ver más juegos →</a>
+    <a href="juegos.html" class="ver-mas">Ver más juegos →</a>
   </section>
 
-  <section id="aplicaciones">
-    <h2>📱 Aplicaciones</h2>
-    <p>Explora apps útiles, creativas y divertidas para tu día a día.</p>
+  <!-- Aplicaciones -->
+  <section>
+    <h3>📱 Aplicaciones</h3>
     <div class="card-container">
-      <a href="https://www.notion.so/" target="_blank" rel="noopener noreferrer" class="card">Notion</a>
-      <a href="https://open.spotify.com/" target="_blank" rel="noopener noreferrer" class="card">Spotify</a>
-      <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed" target="_blank" rel="noopener noreferrer" class="card">Snapseed</a>
+      <a href="https://www.notion.so/" target="_blank" class="card apps">Notion</a>
+      <a href="https://open.spotify.com/" target="_blank" class="card apps">Spotify</a>
+      <a href="https://www.canva.com/" target="_blank" class="card apps">Canva</a>
     </div>
-    <a href="aplicaciones.html" class="subpage-link">Ver más aplicaciones →</a>
+    <a href="aplicaciones.html" class="ver-mas">Ver más aplicaciones →</a>
   </section>
 
-  <section id="peliculas">
-    <h2>🍿 Películas</h2>
-    <p>Recomendaciones de películas imperdibles, desde clásicos hasta los estrenos más recientes.</p>
+  <!-- Películas -->
+  <section>
+    <h3>🍿 Películas</h3>
     <div class="card-container">
-      <a href="https://www.warnerbros.com/movies/inception" target="_blank" rel="noopener noreferrer" class="card">Inception</a>
-      <a href="https://www.paramount.com/movies/interstellar" target="_blank" rel="noopener noreferrer" class="card">Interstellar</a>
-      <a href="https://www.sonypictures.com/movies/spider-manintothespider-verse" target="_blank" rel="noopener noreferrer" class="card">Spider-Man: Into the Spider-Verse</a>
+      <a href="https://www.warnerbros.com/movies/inception" target="_blank" class="card pelis">Inception</a>
+      <a href="https://www.paramount.com/movies/interstellar" target="_blank" class="card pelis">Interstellar</a>
+      <a href="https://www.sonypictures.com/movies/spider-manintothespider-verse" target="_blank" class="card pelis">Spider-Man: Into the Spider-Verse</a>
     </div>
-    <a href="películas.html" class="subpage-link">Ver más películas →</a>
+    <a href="peliculas.html" class="ver-mas">Ver más películas →</a>
   </section>
 
-  <section id="data packs">
-    <h2>📂 Data Packs</h2>
-    <p>Descarga packs de equipos, mods y contenido personalizado.</p>
+  <!-- Data Packs -->
+  <section>
+    <h3>📂 Data Packs</h3>
     <div class="card-container">
-      <a href="https://drive.google.com/xxxx" target="_blank" rel="noopener noreferrer" class="card">Rōnin FC Pack</a>
-      <a href="https://www.mediafire.com/file/yyyy/team-x-pack.zip/file" target="_blank" rel="noopener noreferrer" class="card">Team X Pack</a>
-      <a href="https://mega.nz/file/zzzz" target="_blank" rel="noopener noreferrer" class="card">Ultimate Mod</a>
+      <a href="https://drive.google.com/xxxx" target="_blank" class="card packs">Rōnin FC Pack</a>
+      <a href="https://www.mediafire.com/file/yyyy/team-x-pack.zip/file" target="_blank" class="card packs">Team X Pack</a>
+      <a href="https://mega.nz/file/zzzz" target="_blank" class="card packs">Ultimate Mod</a>
     </div>
-    <a href="data packs.html" class="subpage-link">Ver más data packs →</a>
+    <a href="datapacks.html" class="ver-mas">Ver más data packs →</a>
   </section>
 
   <footer>
-    <p>© 2025 ZC Tech | Hecho con ❤️ en HTML y CSS</p>
+    <p>© 2025 ZC Tech | Página de Inicio</p>
   </footer>
-
-  <script>
-    let lastScroll = 0;
-    const header = document.querySelector("header");
-
-    window.addEventListener("scroll", () => {
-      const currentScroll = window.pageYOffset;
-      if (currentScroll > lastScroll) {
-        header.classList.add("hide");
-      } else {
-        header.classList.remove("hide");
-      }
-      lastScroll = currentScroll;
-    });
-  </script>
 </body>
 </html>
