--- a/juegos.html
+++ b/juegos.html
@@ -5,72 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ZC Tech - Juegos</title>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: linear-gradient(135deg, #1e3c72, #2a5298);
       color: #fff;
       line-height: 1.6;
-      padding-top: 120px; /* espacio para que el header fijo no tape el contenido */
-    }
-    header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background: rgba(0, 0, 0, 0.7);
-      text-align: center;
       padding: 2rem;
-      z-index: 1000;
-      transition: top 0.4s ease;
+      text-align: center;
     }
-    header.hide {
-      top: -120px;
-    }
-    header h1 {
-      font-size: 2.3rem;
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
       background: linear-gradient(90deg, #ff4081, #00d9ff, #ffea00);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    nav ul {
-      display: flex;
-      justify-content: center;
-      list-style: none;
-      gap: 2rem;
-      flex-wrap: wrap;
-      margin-top: 1rem;
-    }
-    nav a {
-      color: #00d9ff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #ffea00;
-    }
-    section {
-      padding: 3rem 2rem;
-      text-align: center;
-    }
-    section h2 {
+    h2 {
       font-size: 2rem;
-      margin-bottom: 1rem;
+      margin: 2rem 0 1rem;
       color: #ffea00;
     }
     .card-container {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
       gap: 1.5rem;
-      margin-top: 2rem;
+      margin-top: 1.5rem;
       max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
+      margin-inline: auto;
     }
     .card {
       display: block;
@@ -84,63 +46,48 @@
     }
     .card:hover {
       transform: scale(1.07);
-      box-shadow: 0 0 20px rgba(255, 234, 0, 0.7);
+      box-shadow: 0 0 20px rgba(255,234,0,0.7);
     }
+    .inicio-btn {
+      display: inline-block;
+      margin-top: 2rem;
+      padding: 0.7rem 1.5rem;
+      background: #ff4081;
+      color: #fff;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s ease;
+    }
+    .inicio-btn:hover { background: #ffea00; color: #000; }
     footer {
+      margin-top: 3rem;
       text-align: center;
       padding: 1rem;
-      background: rgba(0,0,0,0.85);
+      background: rgba(0,0,0,0.7);
       font-size: 0.9rem;
-      margin-top: 2rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>ZC Tech - Juegos</h1>
-    <nav>
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="juegos.html">Juegos</a></li>
-        <li><a href="aplicaciones.html">Aplicaciones</a></li>
-        <li><a href="películas.html">Películas</a></li>
-        <li><a href="data packs.html">Data Packs</a></li>
-      </ul>
-    </nav>
-  </header>
+  <h1>ZC Tech</h1>
+  <h2>🎮 Catálogo de Juegos</h2>
 
-  <section>
-    <h2>🎮 Catálogo de Juegos</h2>
-    <p>Explora más títulos destacados en el mundo gamer.</p>
-    <div class="card-container">
-      <a href="https://www.playstation.com/es-es/god-of-war/" target="_blank" rel="noopener noreferrer" class="card">God of War</a>
-      <a href="https://ffvii-remake.square-enix-games.com/" target="_blank" rel="noopener noreferrer" class="card">Final Fantasy VII Remake</a>
-      <a href="https://www.hollowknight.com/" target="_blank" rel="noopener noreferrer" class="card">Hollow Knight</a>
-      <a href="https://www.leagueoflegends.com/" target="_blank" rel="noopener noreferrer" class="card">League of Legends</a>
-      <a href="https://genshin.hoyoverse.com/" target="_blank" rel="noopener noreferrer" class="card">Genshin Impact</a>
-      <a href="https://www.callofduty.com/warzone" target="_blank" rel="noopener noreferrer" class="card">Call of Duty: Warzone</a>
-      <a href="https://www.residentevil.com/re4/" target="_blank" rel="noopener noreferrer" class="card">Resident Evil 4 Remake</a>
-      <a href="https://www.nintendo.com/es-cl/store/products/super-mario-odyssey-switch/" target="_blank" rel="noopener noreferrer" class="card">Super Mario Odyssey</a>
-    </div>
-  </section>
+  <div class="card-container">
+    <a href="https://www.playstation.com/es-es/god-of-war/" target="_blank" class="card">God of War</a>
+    <a href="https://ffvii-remake.square-enix-games.com/" target="_blank" class="card">Final Fantasy VII Remake</a>
+    <a href="https://www.hollowknight.com/" target="_blank" class="card">Hollow Knight</a>
+    <a href="https://www.leagueoflegends.com/" target="_blank" class="card">League of Legends</a>
+    <a href="https://genshin.hoyoverse.com/" target="_blank" class="card">Genshin Impact</a>
+    <a href="https://www.callofduty.com/warzone" target="_blank" class="card">Call of Duty: Warzone</a>
+    <a href="https://www.residentevil.com/re4/" target="_blank" class="card">Resident Evil 4 Remake</a>
+    <a href="https://www.nintendo.com/es-cl/store/products/super-mario-odyssey-switch/" target="_blank" class="card">Super Mario Odyssey</a>
+  </div>
+
+  <a href="index.html" class="inicio-btn">← Volver al Inicio</a>
 
   <footer>
     <p>© 2025 ZC Tech | Página de Juegos</p>
   </footer>
-
-  <script>
-    let lastScroll = 0;
-    const header = document.querySelector("header");
-
-    window.addEventListener("scroll", () => {
-      const currentScroll = window.pageYOffset;
-      if (currentScroll > lastScroll) {
-        header.classList.add("hide");
-      } else {
-        header.classList.remove("hide");
-      }
-      lastScroll = currentScroll;
-    });
-  </script>
 </body>
 </html>
