--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <a href="https://www.paramount.com/movies/interstellar" target="_blank" class="card pelis">Interstellar</a>
       <a href="https://www.sonypictures.com/movies/spider-manintothespider-verse" target="_blank" class="card pelis">Spider-Man: Into the Spider-Verse</a>
     </div>
-    <a href="peliculas.html" class="ver-mas">Ver más películas →</a>
+    <a href="películas.html" class="ver-mas">Ver más películas →</a>
   </section>
 
   <!-- Data Packs -->
